--- a/package.json
+++ b/package.json
@@ -1,35 +1,49 @@
 {
-  "name": "replica-career-track-be-ts",
+  "name": "estate-sale-trackr",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "tracks estate sales and displays them in a pleasent way",
+  "main": "index.js",
   "scripts": {
-    "test": "jest --verbose --runInBand --testLocationInResults --setupFiles dotenv/config",
-    "test:watch": "npm run test -- --watch",
-    "start": "node -r dotenv/config server.js",
-    "start:watch": "nodemon -r dotenv/config server.js"
+    "test": "jest test",
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
-  "jest": {
-    "testEnvironment": "node"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/benwaples/estate-sale-trackr.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "estate-sale",
+    "tracking"
+  ],
+  "author": "benwaples",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.13.10",
-    "@babel/plugin-syntax-class-properties": "^7.12.13",
-    "@types/jest": "^26.0.20",
-    "@types/pg": "^7.14.11",
-    "eslint": "^7.21.0",
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.7",
-    "supertest": "^6.1.3"
+  "bugs": {
+    "url": "https://github.com/benwaples/estate-sale-trackr/issues"
   },
+  "homepage": "https://github.com/benwaples/estate-sale-trackr#readme",
   "dependencies": {
-    "@types/express": "^4.17.11",
-    "@types/supertest": "^2.0.10",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "pg": "^8.5.1"
+    "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
+    "@types/nodemon": "^1.19.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@tsconfig/recommended": "^1.0.2",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "concurrently": "^8.0.1",
+    "eslint": "^8.37.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3"
   }
 }
