--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
+    "@types/jsdom": "^21.1.1",
+    "@types/node-fetch": "^2.6.3",
     "@types/nodemon": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsdom": "^21.1.1",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
