--- a/package.json
+++ b/package.json
@@ -24,16 +24,22 @@
   },
   "homepage": "https://github.com/benwaples/estate-sale-trackr#readme",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/jsdom": "^21.1.1",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node-fetch": "^2.6.3",
     "@types/nodemon": "^1.19.2",
+    "@types/pg": "^8.6.6",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsdom": "^21.1.1",
-    "node-fetch": "^2.6.1"
+    "jsonwebtoken": "^9.0.0",
+    "node-fetch": "^2.6.1",
+    "pg": "^8.10.0"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
